# mcat

./: .gitignore  CHANGELOG.md  CHANNELOG.md  Cargo.toml  README.md  current.rs  dist-workspace.toml  err.txt  roadmap.txt  scb  test.html  test.md  test.txt  what-should-be.txt
.github/workflows/: release.yml
.images/: img.docx  img.md
crates/core/: Cargo.toml  README.md  cargo.toml
crates/core/src/: catter.rs  cdp.rs  concater.rs  config.rs  converter.rs  fetch_manager.rs  html2md.rs  image_viewer.rs  inspector.rs  main.rs  markdown.rs  prompter.rs  scrapy.rs
crates/core/src/markdown_viewer/: html_preprocessor.rs  image_preprocessor.rs  mod.rs  render.rs  themes.rs  utils.rs
crates/core/styles/: light.css  style.css
crates/core/wix/: main.wxs
crates/markdownify/: Cargo.toml  README.md  cargo.toml
crates/markdownify/src/: docx.rs  lib.rs  opendoc.rs  pdf.rs  pptx.rs  sheets.rs
crates/markdownify/src/pdf/: mod.rs  pdf_element.rs  pdf_page.rs  pdf_state.rs
crates/pdfr/: Cargo.toml
crates/pdfr/src/: lib.rs  pdf_element.rs  pdf_page.rs  pdf_state.rs
crates/rasteroid/: Cargo.toml  README.md
crates/rasteroid/src/: ascii_encoder.rs  image_extended.rs  iterm_encoder.rs  kitty_encoder.rs  lib.rs  sixel_encoder.rs  term_misc.rs
images/: test.md
markdownify/: README.md  cargo.toml
markdownify/src/: lib.rs  opendoc.rs  pdf.rs
markitdown/: README.md  cargo.toml
markitdown/src/: lib.rs  pdf.rs  pptx.rs  sheets.rs
mcat/: cargo.toml
mcat/src/: catter.rs  concater.rs  converter.rs  main.rs
mcat/styles/: default.css
rasteroid/: README.md  cargo.toml
rasteroid/src/: image_extended.rs  iterm_encoder.rs  kitty_encoder.rs  lib.rs  sixel_encoder.rs  term_misc.rs
scripts/: markitdown_worker.py
src/: catter.rs  concater.rs  converter.rs  fetch_manager.rs  image_extended.rs  imager.rs  inspector.rs  interpolator.rs  iterm_encoder.rs  kitty_encoder.rs  main.rs  markdown.rs  markitdown.rs  prompter.rs  reader.rs  scrapy.rs  sixel_encoder.rs  term_misc.rs
src/markitdown/: docx.rs  mod.rs  msdoc.rs  opendoc.rs  pdf.rs  pptx.rs  sheets.rs
src/rasteroid/: image_extended.rs  iterm_encoder.rs  kitty_encoder.rs  mod.rs  sixel_encoder.rs  term_misc.rs
styles/: default.css  makurai.css
