[package]
name = "mcat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.36"
comrak = "0.38.0"
crossterm = "0.29.0"
dunce = "1.0.5"
ignore = "0.4.23"
image = "0.25.6"
inquire = "0.7.5"
lazy_static = "1.5.0"
pyo3 = "0.24.1"
tempfile = "3.19.1"
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
color_quant = "1.1.0"
base64 = "0.22.1"
