[package]
name = "mcat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.36"
comrak = "0.38.0"
crossterm = "0.29.0"
ignore = "0.4.23"
image = "0.25.6"
inquire = "0.7.5"
lazy_static = "1.5.0"
tempfile = "3.19.1"
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
color_quant = "1.1.0"
base64 = "0.22.1"
fast_image_resize = { version = "5.1.2", features = ["image"] }
ffmpeg-sidecar = "2.0.5"
flate2 = "1.1.0"
rand = "0.9.0"
syntect = "5.2.0"
