[package]
name = "mcat"
version = "0.1.1"
authors = ["Meron Bossin"]
description = "a powerfull extended cat command, to cat all the things you couldn't before"
keywords = ["mcat", "inline", "markitdown", "terminal", "rasterm"]
categories = ["command-line-utilities"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
clap = "4.5.36"
comrak = "0.38.0"
crossterm = "0.29.0"
ignore = "0.4.23"
image = "0.25.6"
inquire = "0.7.5"
lazy_static = "1.5.0"
tempfile = "3.19.1"
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
color_quant = "1.1.0"
base64 = "0.22.1"
fast_image_resize = { version = "5.1.2", features = ["image"] }
ffmpeg-sidecar = "2.0.5"
flate2 = "1.1.0"
rand = "0.9.0"
syntect = "5.2.0"
resvg = "0.45.1"
fontdb = "0.23.0"
urlencoding = "2.1.3"
# chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime", "_fetcher-rusttls-tokio"], default-features = false, rev = "6f2392f"}
chromiumoxide = { version = "0.7.0", features = ["tokio-runtime", "_fetcher-rusttls-tokio"], default-features = false}
tokio = "1.44.2"
futures = "0.3.31"
dirs = "6.0.0"
csv = "1.3.1"
zip = "2.6.1"
calamine = "0.25.0"
lopdf = "0.36.0"
quick-xml = "0.37.4"
scraper = "0.23.1"
reqwest = "0.12.15"
