[package]
name = "mcat"
version = "0.3.9"
authors = ["Meron Bossin"]
description = "a powerfull extended cat command, to cat all the things you couldn't before"
keywords = ["cat", "inline", "markitdown", "terminal", "file-converter"]
categories = [
  "command-line-utilities",
  "text-processing",
  "rendering",
  "multimedia",
]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "../../README.md"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "98B25CB4-C372-49AB-BE32-DFCB1C5110E5"
path-guid = "D1F93E5C-A8FF-462C-9540-5AF4D067001E"
license = false
eula = false

[dependencies]
markdownify = { version = "0.2.1", path = "../markdownify" }
rasteroid = { version = "0.1.6", path = "../rasteroid" }
strip-ansi-escapes = "0.2.1"
clap_complete = "4.5.50"
which = "8.0.0"
rayon = "1.10.0"
itertools = "0.14.0"
inquire = "0.7.5"
shell-words = "1.1.0"
ignore = "0.4.23"
textwrap = "0.16.2"
clap = "4.5.36"
comrak = "0.39.0"
crossterm = "0.29.0"
image = { version = "0.25.6", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
tempfile = "3.19.1"
ffmpeg-sidecar = "2.0.5"
syntect = "5.2.0"
resvg = "0.45.1"
fontdb = "0.23.0"
serde_json = "1.0.140"
base64 = "0.22.1"
tokio = { version = "1.44.2", default-features = false, features = ["macros"] }
tokio-tungstenite = "0.27.0"
futures = "0.3.31"
unicode-width = "0.2.1"
dirs = "6.0.0"
zip = "3.0.0"
scraper = "0.23.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "stream"] }
indicatif = "0.17.11"
regex = "1.11.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
