[package]
name = "markdownify"
version = "0.1.7"
authors = ["Meron Bossin"]
description = "markitdown in rust - convert various document and files into markdown"
keywords = ["conversion", "parser", "markitdown", "document", "markdown"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
lopdf = "0.36.0"
tempfile = "3.19.1"
csv = "1.3.1"
zip = "3.0.0"
calamine = "0.25.0"
quick-xml = "0.37.4"
