[package]
name = "markdownify"
version = "0.2.1"
authors = ["Meron Bossin"]
description = "markitdown in rust - convert various document and files into markdown"
keywords = ["conversion", "parser", "markitdown", "document", "markdown"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
csv = "1.3.1"
zip = "5.1.1"
tempfile = "3.19.1"
calamine = "0.31.0"
quick-xml = "0.38.3"
lopdf = { version = "0.38.0", default-features = false }