[package]
name = "pdfr"
version = "0.1.0"
authors = ["Meron Bossin"]
description = "high level pdf parser"
keywords = ["pdf", "parser", "high-level", "reader", "pdf2"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
lopdf = "0.36.0"
