[package]
name = "rasteroid"
version = "0.1.1"
authors = ["Meron Bossin"]
description = "turn images / videos into inline content for you terminal (iterm / kitty / sixel)"
keywords = ["sixel", "iterm", "kitty", "terminal", "terminal-graphics"]
categories = ["graphics", "rendering", "command-line-utilities"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
image = "0.25.6"
lazy_static = "1.5.0"
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
color_quant = "1.1.0"
base64 = "0.22.1"
fast_image_resize = { version = "5.1.2", features = ["image"] }
flate2 = "1.1.0"
signal-hook = "0.3.17"
