[package]
name = "rasteroid"
version = "0.1.8"
authors = ["Meron Bossin"]
description = "turn images / videos into inline content for you terminal (iterm / kitty / sixel)"
keywords = ["sixel", "iterm", "kitty", "terminal", "terminal-graphics"]
categories = ["graphics", "rendering", "command-line-utilities"]
repository = "https://github.com/Skardyy/mcat"
homepage = "https://github.com/Skardyy/mcat"
documentation = "https://github.com/Skardyy/mcat"
license = "MIT"
readme = "README.md"
edition = "2024"

[dependencies]
rand = "0.9.2"
base64 = "0.22.1"
crossterm = "0.29.0"
color_quant = "1.1.0"
signal-hook = "0.3.18"
shared_memory = "0.12.4"
fast_image_resize = { version = "5.3.0", features = ["image"] }
image = { version = "0.25.8", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
ffmpeg-sidecar = "2.2.0"
